# SproutChat

./: ABOUT_THE_WARNING.md  ADD_API_KEY.md  AI_SYSTEM_OVERVIEW.md  API_KEY_ADDED.md  BUILD_INSTRUCTIONS.md  COMPLETE_AI_SYSTEM.md  FIXED_API_ACCESS.md  GROQ_SETUP.md  INSTRUCTIONS_ADDED.md  INTELLIGENCE_IMPROVEMENTS.md  KNOWLEDGE_BASE_SETUP.md  OFFLINE_LLM_SETUP.md  OLLAMA_SETUP.md  QUICK_START.md  README.md  SENSOR_ASSISTANT_GUIDE.md  SETUP_REQUIRED.md  SUPER_INTELLIGENCE_SYSTEM.md  add-knowledge-runner.html  capacitor.config.ts  codemagic.yaml  comprehensive-disaster-guide.json  concise-disaster-guide.json  index.html  package-lock.json  package.json  tailwind.config.js  test-frontend-connection.html  vite.config.ts.timestamp-1761875720751-d5106b1dab71b8.mjs
android/app/: build.gradle
plugins/capacitor-offline-llm/: CapacitorOfflineLlm.podspec  README.md  package.json
plugins/capacitor-offline-llm/android/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  llama_bridge.h  offlinellm-jni.cpp
plugins/capacitor-offline-llm/android/src/main/cpp/llama/include/: llama.h
scripts/: add-concise-guide.js  add-disaster-guide.js  add-knowledge.js  dev-offline.ts  fetch-llama.sh  generate-all-question-variations.cjs  generate-disaster-questions.js  test-disaster-knowledge.js  test-knowledge.js  test-pure-semantic.js
src/: App.tsx  index.css  main.tsx  offlineRuntime.ts  runtimeMode.ts
src/components/: CameraCapture.tsx  ErrorConsole.tsx  NavigationMap.tsx  PackingList.tsx  SituationalGuide.tsx  VoiceMode.tsx  VoiceModeMobile.tsx
src/hooks/: useOfflineInjection.ts
(+36 files in other folders)
